hidden listo, es hora de crear otra rama y testear los datos con props

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,7 +23,8 @@ body{
 .menu{
     background-color: #FFFFFF;
     color: #000;
-    height: 70px;
+    height: 100px;
+    margin-top: 20px;
 }
 .menu__container{
     display: flex;
@@ -67,11 +68,12 @@ body{
     font-size: 20px;
 }
 .menu__link{
+    font-size: 13px;
     display: flex;
     align-items: center;
     padding: 0 30px;
     height: 100%;
-    
+    text-transform: uppercase;
 }
 .menu__nesting{
     transition: clip-path .3s;
@@ -84,7 +86,8 @@ body{
     background-color: #FFFFFF;
 }
 .menu__link--inside{
-    padding: 27px 100px 27px 20px;
+    padding: 23px 100px 23px 20px;
+
 }
 .menu__link--inside:hover{
     background-color: #ABEBC6; 
@@ -121,6 +124,7 @@ body{
      overflow-y: auto;
      display: grid;
      grid-auto-rows: max-content;
+     display: none;
     }
     .menu__link{
         padding: 25px 0;
