--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,5 +1,50 @@
 .layout{
-    max-width: 1000px;
+    max-width: 1100px;
     width: 100%;
     margin: 0 auto;
+}
+.topic__container{
+    background-color: #FFFFFF;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 500px;
+    margin: 100px 20px;
+    padding: 10px;
+    transition: .3s;
+}
+.topic__container:hover{
+    transform: scale(1.01);
+    box-shadow: 1px 1px 30px rgba(255, 0, 0, 0.8);
+}
+.topic__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .3s;
+}
+.topic__img:hover{
+    transform: scale(1.02); 
+}
+.phrase{
+    color: #838383;
+    font-size: 10px;
+    margin-top: 100px;
+    margin-left: 50px;
+    text-transform: uppercase;
+}
+.title{
+    font-size: 40px;
+    margin-top: 40px;
+    font-weight: 400;
+    margin-left: 50px;
+    text-transform: uppercase;
+}
+.categories{
+    color: #838383;
+    font-size: 10px;
+    margin-top: 25px;
+    margin-left: 50px;
+    margin-right: 50px;
+    line-height: 17px;
+    text-transform: uppercase;
 }
