section products listo

--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -11,19 +11,16 @@
     margin: 100px 20px;
     padding: 10px;
     transition: .3s;
+    border-radius: 5px;
 }
 .topic__container:hover{
     transform: scale(1.01);
-    box-shadow: 1px 1px 30px rgba(255, 0, 0, 0.8);
+    box-shadow: 0px 1px 30px rgba(0,0,0, 0.1);
 }
 .topic__img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: .3s;
-}
-.topic__img:hover{
-    transform: scale(1.02); 
 }
 .phrase{
     color: #838383;
@@ -47,4 +44,64 @@
     margin-right: 50px;
     line-height: 17px;
     text-transform: uppercase;
+}
+.products{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2rem;
+    padding: 1rem;
+}
+.product__card{
+    background-color: #FFFFFF;
+}
+.product__img{
+    width: 100%;
+    object-fit: cover;
+}
+.product__title{
+    text-align: center;
+    text-transform: uppercase;
+    color: #838383;
+    font-size: 14px;
+    padding: 1rem;
+    font-weight: lighter;
+}
+@media(max-width: 1100px){
+    .topic__container{
+        grid-auto-rows: 320px;
+    }
+    .phrase{
+        margin-top: 70px;
+    }
+}
+@media(max-width: 720px){
+    .topic__container{
+        grid-template-columns: repeat(1, 1fr);
+        margin: 24px 0px;
+    }
+    .topic__container:hover{
+        transform: scale(1.005);
+        box-shadow: unset;
+    }
+    .products{
+        gap: 1rem;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(max-width: 480px){
+    .topic__container{
+        margin: 0;
+        grid-auto-rows: 250px auto;
+    }
+    .phrase{
+        margin-top: 30px;
+        margin-left: 0;
+    }
+    .title{
+        margin-left: 0;
+        margin-top: 16px;
+    }
+    .categories{
+        margin-left: 0;
+    }
 }
