--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -129,7 +129,7 @@
 }
 @media(max-width: 480px){
     .topic__container{
-        margin: 0;
+        margin: 40px 0 0 0;
         grid-auto-rows: 250px auto;
     }
     .phrase{
