--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -113,6 +113,7 @@
     padding-left: 25px;
     text-transform: uppercase;
     color: #838383;
+    margin: 40px 0;
 }
 @media(max-width: 1100px){
     .topic__container{
