--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -8,15 +8,15 @@
   background-color: #ffffff;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 500px;
-  margin: 100px 20px;
+  grid-auto-rows: 340px;
+  margin: 120px 20px;
   padding: 10px;
   transition: 0.3s;
   border-radius: 5px;
+  box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.1);
 }
 .topic__container:hover {
   transform: scale(1.01);
-  box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.1);
 }
 .topic-container__img {
   transition: 0.3s;
@@ -39,7 +39,7 @@
   transition: 0.3s;
   color: #838383;
   font-size: 10px;
-  padding-top: 100px;
+  padding-top: 50px;
   padding-left: 50px;
   text-transform: uppercase;
 }
@@ -164,7 +164,7 @@
 }
 @media (max-width: 480px) {
   .topic__container {
-    margin: 40px 0 0 0;
+    margin: 100px 0 0 0;
     grid-auto-rows: 250px auto;
   }
   .phrase {
@@ -174,6 +174,7 @@
   .title {
     padding-left: 15px;
     padding-top: 16px;
+    font-size: 31px;
   }
   .categories {
     padding-left: 15px;
