icons end home right now

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -118,6 +118,7 @@ body{
     overflow-x: scroll;
     margin: auto;
     padding: 5px;
+    margin-top: 20px;
     text-align: center;
 }
 .anuncio::-webkit-scrollbar{
@@ -202,4 +203,9 @@ body{
         border-left: 1px solid #717171;
     }
 
+}
+@media(max-width: 480px){
+    .anuncio{
+        margin-top: 0px;
+    }
 }
